--- a/assets/styles.css
+++ b/assets/styles.css
@@ -55,3 +55,25 @@ div.display li {
     padding-top: 5px;
     list-style-type: none;
 }
+
+table {
+    border-collapse: collapse;
+    border: 1px solid var(--darkest);
+}
+
+tr {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+td {
+    padding: 5px;
+}
+
+tr:nth-child(even) {
+    background-color: var(--dark);
+}
+
+tr:nth-child(odd) {
+    background-color: var(--base-color);
+}
